Thu Jun  6 18:36:13 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0613.feature : Add scenario to reproduce
	  false-positive of W0613 code check when an array-subscript-expression
	  refers to the global constant array is specified as the controlling
	  expression.

	* lib/adlint/cc1/expr.rb : Improve heuristics of array subscript
	  evaluation with indefinite subscript only in controlling expressions.
	* lib/adlint/cc1/interp.rb : Ditto.
	* lib/adlint/cc1/option.rb : Ditto.

Wed Jun  5 17:37:23 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Fix variable's value version rollback
	  mechanism in order not to do unnecessary rollback of inner-variables
	  of array or composite value.

	* lib/adlint/cc1/type.rb : Fix bad type traits predicate methods for
	  array type.

	* features/code_check/W0097.feature : Add scenario to reproduce a known
	  bug.
	* features/code_check/W0461.feature : Ditto.

	* lib/adlint/cc1/value.rb : Add comment to newly added destructive
	  #force_oeverwrite! method.

Wed Jun  5 17:21:36 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/mediator.rb : Revise pointer dereferencing behavior to
	  successfully dereference a pointer only when the value of pointer
	  variable is definite.

Tue Jun  4 20:33:44 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0705.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/cc1/interp.rb : Fix evaluation of the global constant
	  variable definition in order not to ignore value of the initializer.
	* lib/adlint/cc1/object.rb : Ditto.
	* lib/adlint/cc1/value.rb : Ditto.

Fri May 31 10:54:11 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.0.8
	  - Fix abend problem of preprocessor when a block comment is not
	    terminated in the translation-unit.
	  - Fix block comment handling in order not to dive into nested part